--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Subpage</title>
+    <title>Details</title>
     <link rel="stylesheet" href="index.css" />
     <style>
       /* Add custom styles for the About Subpage */
@@ -84,15 +84,13 @@
       <ul class="nav-flex-row">
         <li class="nav-item">
           <a href="web.html">Home</a>
-          <ul class="sub-menu">
-            <!-- Add more subpage links if needed -->
-          </ul>
+          <ul class="sub-menu"></ul>
         </li>
         <li class="nav-item">
-          <a href="#reservation">Reservation</a>
+          <a href="characters.html">Characters</a>
         </li>
         <li class="nav-item">
-          <a href="#menu">Menu</a>
+          <a href="creators.html">Creators</a>
         </li>
         <li class="nav-item">
           <a href="events.html">Events</a>
@@ -100,10 +98,9 @@
       </ul>
     </nav>
 
-    <!-- Content section for the About Subpage -->
     <section class="about-subpage-section">
       <article>
-        <h3>About Subpage</h3>
+        <h3>About</h3>
         <p>
           Welcome to the exciting world of comics! Here, imagination comes to
           life through captivating stories and stunning illustrations. Comics
@@ -141,7 +138,5 @@
         </p>
       </div>
     </section>
-
-    <!-- Add any additional elements or sections as needed -->
   </body>
 </html>
