--- a/characters.html
+++ b/characters.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Character Subpage</title>
+    <title>Characters</title>
     <link rel="stylesheet" href="index.css" />
     <style>
       /* Add custom styles for the Character Subpage */
@@ -78,7 +78,7 @@
         <li><a href="web.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="creators.html">Creators</a></li>
-        <li><a href="#order">Order</a></li>
+        <li><a href="events.html">Events</a></li>
       </ul>
     </nav>
 
