--- a/creators.html
+++ b/creators.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creators Subpage</title>
+    <title>Creators</title>
     <link rel="stylesheet" href="index.css" />
     <style>
       /* Add custom styles for the Creators Subpage */
