--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events Subpage</title>
+    <title>Events</title>
     <link rel="stylesheet" href="index.css" />
     <style>
       /* Add custom styles for the Events Subpage */
@@ -94,7 +94,6 @@
       </ul>
     </nav>
 
-    <!-- Content section for the Events Subpage -->
     <section class="events-section">
       <div class="event-card">
         <img src="images/crisis.jpg" alt="Crisis on Infinite Earths" />
