--- a/web.html
+++ b/web.html
@@ -108,7 +108,7 @@
           <a href="characters.html">Characters</a>
         </li>
         <li class="nav-item">
-          <a href="#menu">Menu</a>
+          <a href="creators.html">Creators</a>
         </li>
         <li class="nav-item">
           <a href="events.html">Events</a>
@@ -116,14 +116,12 @@
       </ul>
     </nav>
 
-    <!-- Content section for the Introduction -->
     <section class="section-intro">
       <header>
         <h1>Hello Comic Lovers!</h1>
       </header>
     </section>
 
-    <!-- Content section for the About -->
     <section class="about-section">
       <article>
         <h3>
@@ -224,8 +222,6 @@
       </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
